[gd_scene load_steps=10 format=2]

[ext_resource path="res://turrets/bullets/bullet.gd" type="Script" id=1]
[ext_resource path="res://images/explosions/bullet_explosion.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 2 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 24, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[node name="Bullet" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )
velocity = 100

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Explosion" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 7 )

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]
